--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>PollenPages ✨ AI Storybooks</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
@@ -228,9 +229,9 @@
           <div class="flex justify-between items-center mb-6">
             <h2 id="bookTitleDisplay" class="text-2xl font-bold text-yellow-300 book-font italic"></h2>
             <div class="flex gap-2">
-              <button onclick="downloadPDF()"
+              <button onclick="downloadZip()" id="saveBtn"
                 class="p-2.5 px-4 bg-zinc-800 hover:bg-zinc-700 border border-zinc-700 rounded-xl text-sm font-semibold transition-colors flex items-center gap-2">
-                <i class="fa-solid fa-download"></i> Save
+                <i class="fa-solid fa-download"></i> Save Zip
               </button>
             </div>
           </div>
